@@ -40,6 +40,7 @@ Release 0.19.0 - Unreleased
    HBASE-908   Add approximate counting to CountingBloomFilter
                (Andrzej Bialecki via Stack)
    HBASE-576   Investigate IPC performance
+   HBASE-920   Make region balancing sloppier
 
   NEW FEATURES
    HBASE-875   Use MurmurHash instead of JenkinsHash [in bloomfilters]
